--- a/src/styles/SearchPage.module.css
+++ b/src/styles/SearchPage.module.css
@@ -4,13 +4,6 @@
   padding: 10px;
   margin: 0 auto;
 }
-.searchContainer {
-  box-shadow: 0 0 10px #F88134;
-  border: 1px solid #F88134;
-  border-radius: 4px;
-  padding: 20px;
-  transition: box-shadow 0.3s ease;
-}
 
 .searchContainer:hover {
   box-shadow: 0 0 20px #F88134;
